Adição do conteúdo para palestra do Firefox Developer Edition

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 		h1,
 		h2,
 		h3,
-		h4 {
+		h4,
+		h5,
+		h6 {
 			font-weight: 100;
 			text-transform: none;
 		}
@@ -65,7 +67,7 @@
 				</section>
 
 				<section class="text-shadow">
-					<h1>Mozilla</h1>
+					<h1 style="font-weight: 900">Mozilla</h1>
 				</section>
 
 				<section class="text-shadow">
@@ -116,8 +118,17 @@
 				</section>
 
 				<section>
+					<style scoped="scoped">
+						p {
+							font-weight: 300;
+							font-size: ;
+						}
+					</style>
 					<h1>Obrigado a todos!</h1>
-					<h4><a href="https://github.com/dudusbarros">github.com/dudusbarros</a></h4>
+					<p>Firefox Developer - <a href="https://www.mozilla.org/pt-BR/firefox/developer/">mozilla.org/firefox/developer</a></p>
+					<p>Mozilla Brasil - <a href="http://www.mozillabrasil.org.br/">mozillabrasil.org.br</a></p>
+					<p>Link dessa palestra - <a href="https://github.com/dudusbarros">noibe.com/talk-firefox</a></p>
+					<p>Meu github - <a href="https://github.com/dudusbarros">github.com/dudusbarros</a></p>
 				</section>
 
 			</div>
