Melhorias no slide de agradecimento

--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
 					<style scoped="scoped">
 						p {
 							font-weight: 300;
-							font-size: ;
 						}
 					</style>
 					<h1>Obrigado a todos!</h1>
 					<p>Firefox Developer - <a href="https://www.mozilla.org/pt-BR/firefox/developer/">mozilla.org/firefox/developer</a></p>
 					<p>Mozilla Brasil - <a href="http://www.mozillabrasil.org.br/">mozillabrasil.org.br</a></p>
 					<p>Link dessa palestra - <a href="https://github.com/dudusbarros">noibe.com/talk-firefox</a></p>
+					<p>Reveal.JS - <a href="lab.hakim.se/reveal-js/">lab.hakim.se/reveal-js</a></p>
 					<p>Meu github - <a href="https://github.com/dudusbarros">github.com/dudusbarros</a></p>
 				</section>
 
