--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 			text-transform: none;
 		}
 
+		p {
+			font-weight: 300;
+		}
+
 		.text-transform-none {
 			text-transform: none;
 		}
@@ -68,6 +72,10 @@
 
 				<section class="text-shadow">
 					<h1 style="font-weight: 900">Mozilla</h1>
+					<p class="fragment">Thunderbird</p>
+					<p class="fragment">Firefox OS</p>
+					<p class="fragment">WoMoz</p>
+					<p class="fragment">Rust</p>
 				</section>
 
 				<section class="text-shadow">
@@ -114,15 +122,10 @@
 
 				<section class="text-shadow">
 					<h1>Webmaker</h1>
-					<a href="https://webmaker.org/pt-BR/goggles"></a>
+					<a href="https://webmaker.org/pt-BR/goggles">X-ray Googles</a>
 				</section>
 
 				<section>
-					<style scoped="scoped">
-						p {
-							font-weight: 300;
-						}
-					</style>
 					<h1>Obrigado a todos!</h1>
 					<p>Firefox Developer - <a href="https://www.mozilla.org/pt-BR/firefox/developer/">mozilla.org/firefox/developer</a></p>
 					<p>Mozilla Brasil - <a href="http://www.mozillabrasil.org.br/">mozillabrasil.org.br</a></p>
